syntax = "proto3";


package action;

import "proto/channel/channel.proto";
import "google/protobuf/any.proto";

option go_package = "eval/proto/action";

message Action {
  string kind = 1;		// should be enum of builtin/custom?
  repeated channel.Channel inputs = 2;
  repeated channel.Channel outputs = 3;

  google.protobuf.Any config = 4;
  // config and sources
}

message BuildImageConfig {
  string image_name = 1;
  string image_tag = 2;
  string base_image = 3;
  string branch = 4;
  string commit_sha = 5;
  repeated string bazel_target = 6;
}
