syntax = "proto3";

package cache;

import "proto/context/context.proto";
import "proto/async_service/async_service.proto";

option go_package = "eval/proto/cache";

message GetRequest {
  string evaluation = 1;
  context.Context context = 2;
  repeated string values = 3;
}

message GetResponse {
  string result = 1;
}

service CacheService {
  rpc Get(GetRequest) returns (async_service.Operation) {}
}
