syntax = "proto3";

package grunt;

option go_package = "eval/proto/grunt";

message EvalRequest {
    int64 number = 1;
}

message EvalResponse {
    int64 number = 1;
}

service EngineService {
    rpc Eval(EvalRequest) returns (EvalResponse) {}
}
